# zetton-common

./: .clang-format  .clangd  .flake8  .markdownlint.json  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  LICENSE  README.md  README_CN.md  README_zh-CN.md  package.xml  setup.py
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-new-model.yml  4-documentation.yml  config.yml
cmake/: Config.cmake.in  util.cmake
docs/zh_CN/: codemap.md  get_started.md
docs/zh_CN/specs/: README.md
example/: cv_gst_rtsp_stream.cc  gst_rtsp_output.cc  gst_rtsp_streamer.py
include/zetton_common/interface/: base_component.h  base_stream.h  base_stream_output.h  base_stream_processor.h  base_stream_source.h
include/zetton_common/legacy/interface/: base_stream.h
include/zetton_common/legacy/stream/: gst_rtsp_stream.h
include/zetton_common/log/: log.h  loguru.h
include/zetton_common/stream/: cv_gst_stream_output.h  cv_gst_stream_source.h  gst_rtsp_stream.h  gst_rtsp_stream_output.h  stream_options.h  stream_uri.h  stream_util.h
include/zetton_common/thread/: process.h  ring_buffer.h
include/zetton_common/time/: duration.h  time.h
include/zetton_common/util/: filesystem.h  log.h  perf.h  registerer.h  ros_util.h  string.h
python/zetton_common/stream/: __init__.py  gst_rtsp_streamer.py
src/zetton_common/interface/: base_stream_output.cc  base_stream_processor.cc  base_stream_source.cc
src/zetton_common/legacy/stream/: gst_rtsp_stream.cc
src/zetton_common/log/: loguru.cc
src/zetton_common/stream/: cv_gst_stream_output.cc  cv_gst_stream_source.cc  gst_rtsp_stream.cc  gst_rtsp_stream_output.cc  stream_options.cc  stream_uri.cc
src/zetton_common/thread/: process.cc
src/zetton_common/time/: duration.cc  time.cc
src/zetton_common/util/: filesystem.cc  process.cc  registerer.cc  ros_util.cc
tool/: install_git_hooks.sh
tool/githooks/: commit-msg
