<?xml version="1.0"?>
<package format="2">
    <name>zetton_common</name>
    <version>1.0.0</version>
    <description>Common definitions and utilities in ROS environment for Project Zetton.</description>
    <maintainer email="xxdsox@gmail.com">Yusu Pan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>
</package>